# docker-installer-tui

./: .gitignore  CHANGELOG.md  DockerInstaller.py  DockerInstallerTUI.py  GITHUB_SETUP.md  MANIFEST.in  Makefile  OctopusMascot.py  PUBLISHING.md  README.md  RELEASE_NOTES.md  REVIEW_REPORT.md  config.json  docker_installer.tcss  install_docker.sh  pypirc_template  pyproject.toml  requirements.txt  run_tui.sh  setup.py  test_comprehensive.py  test_installation.py  test_installer_comprehensive.py  test_installer_integration.py  test_practical.py  test_suite.py  test_system.py  test_tui.py
examples/: README.md  example_usage.py
