[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-installer-tui"
version = "1.0.0"
authors = [
    {name = "Community", email = "docker-installer-tui@example.com"},
]
description = "A Terminal User Interface for Docker installation, management, and exploration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.50.0",
    "requests>=2.28.0",
    "docker>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock",
    "flake8",
    "black",
    "mypy",
]

[project.scripts]
docker-installer-tui = "DockerInstallerTUI:main"
docker-installer = "DockerInstaller:main"

[project.urls]
Homepage = "https://github.com/cbwinslow/docker-installer-tui"
Repository = "https://github.com/cbwinslow/docker-installer-tui"
"Bug Reports" = "https://github.com/cbwinslow/docker-installer-tui/issues"
"Source Code" = "https://github.com/cbwinslow/docker-installer-tui"

[tool.setuptools.packages.find]
include = ["docker_installer_tui*"]

[tool.setuptools.package-data]
"*" = ["*.tcss", "*.json", "*.md", "*.sh"]